k8s/applications/external/haos/svc.yaml
# endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-external
  namespace: haos
  labels:
    kubernetes.io/service-name: home-assistant
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "192.168.16.16"
