k8s/applications/external/haos/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: haos
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "haos.pc-tips.se"
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
